--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import "../styles/global.css";
+---
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +10,25 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Tilín</title>
 	</head>
-	<body>
-		<slot />
+	<body class="dark">
+		<section>
+			<slot />
+		</section>
 	</body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+section {
+	width: 85rem;
+	height: 100%;
+	font-size: 1.6rem;
+	margin: 0 auto;
+	padding: 2rem;
+	background: var(--bg-window);
+	border-radius: 2rem;
+	box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.15);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+}
 </style>
