--- a/src/styles/cardReminders.css
+++ b/src/styles/cardReminders.css
@@ -51,3 +51,24 @@ input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+@keyframes highlight {
+  0% {
+    background-color: #a3d3ff;
+    transform: scale(1);
+  }
+  50% {
+    background-color: #ebebeb; /* Color de resaltado */
+    transform: scale(1.05); /* Un pequeño zoom */
+  }
+  100% {
+    background-color: #a3d3ff;
+    transform: scale(1);
+  }
+}
+
+/* Clase que se aplicará cuando el recordatorio haya sonado */
+.highlight {
+  animation: highlight 1s ease-out;
+  animation-iteration-count: 1;
+}
