--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Reminders from '../components/Reminders';
 import Clock from '../components/Clock';
+import Motivation from '../components/Motivation';
 
 ---
 
@@ -15,7 +16,7 @@ import Clock from '../components/Clock';
 		<aside>
 			<div>
 				<p class="done">¡Muy bien! Continúa así...</p>
-				<p class="motivation">¡Eres increíble!</p>
+				<Motivation client:load/>
 			</div>
 			<Clock client:load/>
 		</aside>
