--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,6 @@ import AddReminder from '../components/AddReminder';
 		<aside>
 			<AddReminder client:load/>
 			<div>
-				<p class="done">Programa tus próximos tilíns.</p>
 				<Motivation client:load/>
 			</div>
 			<Clock client:load/>
@@ -45,10 +44,12 @@ aside {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 4rem;
+	gap: 1rem;
 }
 
-.done {
-    margin-bottom: 1rem;
+div {
+	width: 100%;
+	height: 9rem;
 }
+
 </style>
