--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,8 @@
 }
 
 :root {
-	color: #ffffffde;
+	--color: #ffffffde;
+	--color-button-hover: #333333;
 	--bg: #284f58;
 	--bg-window: #32626e;
 	--bg-card: #3f7d8d;
@@ -15,19 +16,27 @@
 	--moonSun: #ffeaa7;
 	--bg-input-toggle: #113e63;
 	--motivation: #ffeaa7;
+	--bg-input-text: #4f91a1;
+	--bg-button: #113e63;
+	--bg-button-hover: #ffeaa7;
+
 }
 
 body.light {
-	color: #333333;
+	--color: #333333;
+	--color-button-hover: #333333;
 	--secondary-text: #666666;
 	--bg-window: #eaccff;
 	--bg-card: #d6b3ff;
-	--bg-input: #fff6c1;
-	--border: #79ceff;
+	--bg-input: #cda1ff;
+	--border: #ba7dff;
 	--moonSun: #fce562;
 	--bg-input-toggle: #76c3f0;
-	--bg: #7bd9e0;
+	--bg: #95cce5;
 	--motivation: #2db2ff;
+	--bg-input-text: #cda1ff;
+	--bg-button: #aad6ff;
+	--bg-button-hover: #ffeaa7;
 }
 
 body {
@@ -51,13 +60,15 @@ html {
 
 .motivation {
 	font-size: 1.7rem;
-	font-weight: bold;
+	font-weight: 500;
 	font-style: italic;
 	color: var(--motivation);
 	transform: 1s ease-in;
-	min-height: 1.5em;
+	width: 90%;
+	margin: 0 auto;
 }
 
 .clock {
 	font-size: 3rem;
+	color: var(--color);
 }
